--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 # Revision history for WWW-Dict-OKDaily
 
+version: 0.02
+date: 2007-04-22
+changes:
+- Kwalitee Improvement
+----
 version: 0.01
 date: 2007-04-21
 changes:
